Add clip-art background

--- a/learn.html
+++ b/learn.html
@@ -10,6 +10,12 @@
 <body>
   <!-- Multiple background image -->
   <div class="multiple-bg wh-100"></div>
+
+
+  <!-- Clipart background -->
+  <div class="wh-100" id="clipped-title">
+    <h1>CLIP ART</h1>
+  </div>
 </body>
 
 </html>
