Restructure project folder
Created folder for each play focus and moved files appropriately

--- a/background/background.html
+++ b/background/background.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../assets/css/normalize.css">
+  <link rel="stylesheet" href="../assets/css/background.css">
   <title>Background</title>
-  <link rel="stylesheet" href="https://unpkg.com/reset-css/reset.css">
-  <link rel="stylesheet" href="backgrounds.css">
 </head>
 
 <body>
