Add .text-white class to Play Focus section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <main>
     <!-- Play focus -->
     <section class="play-focus">
-      <h2>PLAY FOCUS</h2>
+      <h2 class="text-white">PLAY FOCUS</h2>
       <div class="focus-components">
         <a class="focus-link" href="grid-and-flex/grid-and-flex.html">
           <div class="focus-badge">Grid & Flex</div>
