--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar">
       <ul class="nav-list">
         <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Git</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://raw.githack.com/cyonii/html-css-play/main/index.html">Git</a></li>
       </ul>
     </nav>
   </header>
