corrected git repo link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <nav class="navbar">
       <ul class="nav-list">
         <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="https://raw.githack.com/cyonii/html-css-play/main/index.html">Git</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/cyonii/html-css-play" target="_blank">
+            Git
+          </a>
+        </li>
       </ul>
     </nav>
   </header>
