--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <section class="play-focus">
       <h2 class="text-white">PLAY FOCUS</h2>
       <div class="focus-components">
-        <a class="focus-link" href="grid-and-flex/grid-and-flex.html">
+        <a class="focus-link" href="grid-and-flex.html">
           <div class="focus-badge">Grid & Flex</div>
         </a>
-        <a class="focus-link" href="#">
+        <a class="focus-link" href="background.html">
           <div class="focus-badge">Background</div>
         </a>
         <a class="focus-link" href="#">
