move reusable style rules to master.css

--- a/background.html
+++ b/background.html
@@ -5,13 +5,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/normalize.css">
+  <link rel="stylesheet" href="assets/css/master.css">
   <link rel="stylesheet" href="assets/css/background.css">
   <title>Background</title>
 </head>
 
 <body>
+  <header class="header">
+    <h1>Backgrounds</h1>
+  </header>
   <!-- Multiple background image -->
-  <section class="multiple-bg wh-100"></section>
+  <section class="multiple-bg">
+    <a href='https://www.freepik.com/vectors/background'>Background vector created by freepik - www.freepik.com</a>
+  </section>
 
 
   <!-- Clipart background -->
