--- a/grid-and-flex.html
+++ b/grid-and-flex.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/normalize.css">
+  <link rel="stylesheet" href="assets/css/master.css">
   <link rel="stylesheet" href="assets/css/grid-and-flex.css">
   <title>Grid & Flex</title>
 </head>
