--- a/background.html
+++ b/background.html
@@ -15,39 +15,51 @@
     <h1>Backgrounds</h1>
   </header>
   <!-- Multiple background image -->
-  <section class="multiple-bg">
-    <a href='https://www.freepik.com/vectors/background'>Background vector created by freepik - www.freepik.com</a>
+  <section class="multi-img-bg">
+    <h2 class="section-title">Multiple Background Images</h2>
+    <div class="multiple-bg"></div>
+    <div class="section-desc">
+      The different images here are the major background (the beach vector),
+      the face, and the hat.
+    </div>
+    <div class="photo-credit">
+      <cite>
+        <strong>PHOTO CREDIT:</strong>
+        <a href='https://www.freepik.com/vectors/background'>Background vector created by freepik - www.freepik.com</a>
+        &nbsp;&#8226;&nbsp;
+        <br>
+        <a href='https://www.freepik.com/photos/fashion'>Fashion photo created by kstudio - www.freepik.com</a>
+      </cite>
+    </div>
   </section>
 
 
   <!-- Clipart background -->
-  <section class="wh-100" id="clipped-title">
+  <section class="clipped-title">
     <h1>CLIP ART</h1>
   </section>
 
 
   <!-- Gradient background -->
-  <section class="wh-100 linear-gradient-bg"></section>
-  <section class="wh-100 radial-gradient-bg center-all">
-    <strong class="fs-4 small-caps">Radial Gradient</strong>
-  </section>
-  <section class="wh-100 conic-gradient-bg center-all">
-    <strong class="fs-4 small-caps">Conic Radial Gradient</strong>
+  <section>
+    <h2 class="section-title">Linear Gradient</h2>
+    <div class="linear-gradient-bg"></div>
   </section>
 
-  <!-- Font -->
-  <section class="wh-100 center-all p-5">
-    <div class="well lean">
-      <h1 class="fs-3">Typography</h1>
-      <p>
-        Line height, the distance between two lines of text
-        (often referred to as leading) is declared using the
-        line-height property. The line-height property accepts
-        all general length values, which we covered in Lesson
-        3, “Getting to Know CSS.”
-      </p>
-      <button class="btn" type="button" name="button">Read more</button>
-    </div>
+  <section>
+    <h2 class="section-title">Radial Gradient</h2>
+    <div class="radial-gradient-bg"></div>
+  </section>
+
+  <section>
+    <h2 class="section-title">Radial Gradient - Spiral</h2>
+    <div class="radial-gradient-bg-spiral"></div>
+  </section>
+
+
+  <section>
+    <h2 class="section-title">Conic Radial Gradient</h2>
+    <div class="conic-gradient-bg"></div>
   </section>
 </body>
 
