reused navbar accross documents

--- a/background.html
+++ b/background.html
@@ -12,8 +12,22 @@
 
 <body>
   <header class="header">
-    <h1>Backgrounds</h1>
+    <nav class="navbar">
+      <a class="nav-title" href="index.html">
+        HTML & CSS
+      </a>
+
+      <ul class="nav-list">
+        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/cyonii/html-css-play" target="_blank">
+            Git
+          </a>
+        </li>
+      </ul>
+    </nav>
   </header>
+
   <!-- Multiple background image -->
   <section class="multi-img-bg">
     <h2 class="section-title">Multiple Background Images</h2>
