--- a/grid-and-flex.html
+++ b/grid-and-flex.html
@@ -12,13 +12,32 @@
 
 <body>
   <header class="header">
-    <h1>GRID & FLEX</h1>
+    <nav class="navbar">
+      <a class="nav-title" href="index.html">
+        HTML & CSS
+      </a>
+
+      <ul class="nav-list">
+        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/cyonii/html-css-play" target="_blank">
+            Git
+          </a>
+        </li>
+      </ul>
+    </nav>
   </header>
+
   <main>
-    <section class="grid-container">
-      <div class="grid-item">1</div>
-      <div class="grid-item">2</div>
-      <div class="grid-item">3</div>
+    <section class="">
+      <!-- <h2 class="section-title">
+        Grid and Flex
+      </h2> -->
+      <div class="grid-container">
+        <div class="grid-item">1</div>
+        <div class="grid-item">2</div>
+        <div class="grid-item">3</div>
+      </div>
     </section>
   </main>
 </body>
