--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/master.css">
-  <title>Learning HTML and CSS</title>
+  <title>Learning HTML & CSS</title>
 </head>
 
 <body>
   <header class="header">
-    <a class="nav-logo" href="#">
-      HTML & CSS
-    </a>
-
     <nav class="navbar">
+      <a class="nav-title" href="index.html">
+        HTML & CSS
+      </a>
+
       <ul class="nav-list">
         <li class="nav-item"><a class="nav-link" href="#">About</a></li>
         <li class="nav-item">
