add illustration display on focus card

--- a/index.html
+++ b/index.html
@@ -32,16 +32,30 @@
     <section class="play-focus">
       <h2 class="text-white">PLAY FOCUS</h2>
       <div class="focus-components">
-        <a class="focus-link" href="grid-and-flex.html">
+        <a class="focus-link grid-and-flex" href="grid-and-flex.html">
+          <div class="grid-showoff">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
           <div class="focus-badge">Grid & Flex</div>
         </a>
-        <a class="focus-link" href="background.html">
+        <a class="focus-link background" href="background.html">
           <div class="focus-badge">Background</div>
         </a>
-        <a class="focus-link" href="#">
+        <a class="focus-link animation" href="#">
+          <div class="anime-object-1"></div>
+          <div class="anime-object-2"></div>
           <div class="focus-badge">Animation</div>
         </a>
-        <a class="focus-link" href="#">
+        <a class="focus-link typography" href="#">
+          <p>T</p>
           <div class="focus-badge">Typography</div>
         </a>
       </div>
