add title to clip-art section

--- a/background.html
+++ b/background.html
@@ -49,8 +49,11 @@
 
 
   <!-- Clipart background -->
-  <section class="clipped-title">
-    <h1>CLIP ART</h1>
+  <section>
+    <h2 class="section-title">Clip Art</h2>
+    <div class="clipped-title">
+      <h1>CLIP ART</h1>
+    </div>
   </section>
 
 
