--- a/neumorphism.html
+++ b/neumorphism.html
@@ -14,12 +14,13 @@
   <main>
     <div class="container mt-5">
       <div class="row justify-content-center">
-        <div class="col-sm-6 col-md-5 col-xl-3 text-center py-5" id="iPhone">
+        <div class="col-sm-6 col-md-5 col-xl-3 d-flex flex-column text-center pt-5 pb-4" id="iPhone">
           <h6>Enter Passcode</h6>
-          <p class="text-muted text-sm fw-light lh-1">
+          <p class="text-muted fs-sm fw-light lh-1">
             <small>Your passcode is required <br> to enable face ID</small>
           </p>
 
+          <!-- Input indicators -->
           <div class="d-flex justify-content-center" id="indicator">
             <span class="bg-secondary"></span>
             <span class="ms-2 bg-secondary"></span>
@@ -27,7 +28,7 @@
             <span class="bg-secondary"></span>
           </div>
 
-          <!-- Number key row -->
+          <!-- Number keys row -->
           <div class="row justify-content-center gx-0 gy-2 mt-5" id="number-row">
             <div class="col-4"><button class="btn num-btn">1</button></div>
             <div class="col-4"><button class="btn num-btn">2</button></div>
@@ -39,6 +40,11 @@
             <div class="col-4"><button class="btn num-btn">8</button></div>
             <div class="col-4"><button class="btn num-btn">9</button></div>
             <div class="col-4"><button class="btn num-btn">0</button></div>
+          </div>
+
+          <div class="d-flex justify-content-between mt-auto">
+            <a class="text-decoration-none fw-light fs-sm link-secondary" href="#">Emergency</a>
+            <a class="text-decoration-none fw-light fs-sm link-secondary" href="#">Cancel</a>
           </div>
         </div>
         <div class="col-12 text-center mt-5">
